--- a/jobs/templates/jobs/detail.html
+++ b/jobs/templates/jobs/detail.html
@@ -1,67 +1,48 @@
-<!doctype html>
-<html lang="en">
-{% load static %}
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
-    <title> Ryan Cook </title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.5/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/4.5/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-<link rel="icon" href="/docs/4.5/assets/img/favicons/favicon.ico">
-<meta name="msapplication-config" content="/docs/4.5/assets/img/favicons/browserconfig.xml">
-<meta name="theme-color" content="#563d7c">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
-  </head>
-  <body>
+{% extends 'jobs/base.html' %}
+{% block 'body' %}
 
 <main role="main">
+  {% load static %}
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1> {{ job.title }} </h1>
+      <br>
+      <h2> {{ job.title }} </h2>
       <br>
       <img src="{{ job.image.url }}" height=300> </img>
-      <br>
-      <p class="lead text-muted"> {{ job.summary }} </p>
-      <p>
-        <a href="{% url 'home' %}" class="btn btn-primary my-2">Back</a>
-      </p>
+      <br> <br> <br>
+      <ul>
+        <h6 class="text-left"> <b>{{ job.month_completed }}</b></h6>
+        <p class="text-left"> <i>{{ job.extracurricular_or_class }}</i></p>
+        <li class="text-left" style="list-style-type: square;"> {{ job.summary }} </li>
+      </ul>
     </div>
   </section>
-</main>
 
-    <script src="{% static 'jquery-3.5.1.min' %}"></script>
-    <!--script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"--><!--/script-->
-    </body>
-</html>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <h3>Related Links</h3>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="{% url 'detail' job.id %}" style="text-decoration:none; color: #000000">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="{{ job.image.url }}"></img>
+              <div class="card-body">
+                <h5 class="card-title"> {{ job.title }} </h5>
+          </a>
+          <p class="card-text"> {{ job.month_completed }} </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="col text-center">
+    <a href="{% url 'home' %}" class="btn btn-primary my-2">Back</a>
+  </div>
+</main>
+<br>
+
+{% endblock %}
