--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2942,7 +2942,7 @@ textarea.form-control-lg {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
+  background-color: #111213;
   border-color: #6c757d;
 }
 .btn-secondary:hover {
