i just want my static fiels back

--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -28,10 +28,7 @@
             <a class="nav-link" aria-current="page" href="{% url 'home' %}#jobs">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="{% url 'home' %}#bio">Bio</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -70,7 +67,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
 
 </body>
 
