--- a/jobs/templates/jobs/detail.html
+++ b/jobs/templates/jobs/detail.html
@@ -55,7 +55,7 @@
 
   <div class="btn-group-justified text-center">
     <a href="{% url 'detail' prev %}" class="btn btn-outline-secondary my-2">Previous</a>
-    <a href="{% url 'home' %}#jobs" class="btn btn-primary my-2">Home</a>
+    <a href="{% url 'home' %}#jobs" class="btn btn-primary my-2">Back to Projects</a>
     <a href="{% url 'detail' next %}" class="btn btn-outline-secondary my-2">Next</a>
   </div>
   <br>
