cleaned up file structure esp static and media

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -167,7 +167,7 @@
                                 <br><br>
                             <h5><i>Philosophy and Film</i></h5>
                                 <input type="button" class="btn btn-sm btn-outline-primary my-2" value="Bazinian Analysis of Hitchcock's Vertigo" onclick="window.open('pf_paper2')">
-                                <input type="button" class="btn btn-sm btn-outline-primary my-2" value="Kupfer's Morality in Television and Film" onclick="window.open('pf_final')">
+                                <input type="button" class="btn btn-sm btn-outline-primary my-2" value="Kupfer's Morality in Television and Film" onclick="window.open('pf_final_paper')">
                                 <br><br>
                         </ul>
                     </div>
