--- a/jobs/templates/jobs/detail.html
+++ b/jobs/templates/jobs/detail.html
@@ -14,10 +14,10 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#about">About</a>
+                    <a class="nav-link active" data-toggle="tab" data-target="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#takeaways">Takeaways</a>
+                    <a class="nav-link" data-toggle="tab" data-target="#takeaways">Takeaways</a>
                 </li>
             </ul>
         </div>
